--- a/Pages/Testovik/Testo.xaml
+++ b/Pages/Testovik/Testo.xaml
@@ -8,9 +8,9 @@
       d:DesignHeight="720" d:DesignWidth="1280"
       Title="Testo" Background="White">
 
-    <Grid>
-        <Slider Name="SldPrice" HorizontalAlignment="Left" Margin="248,299,0,0" VerticalAlignment="Top" Width="154" TickPlacement="Both" Value="5" Maximum="15"/>
-        <TextBox Name="TxbPrice" HorizontalAlignment="Left" Margin="279,342,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" TextChanged="TxbPrice_TextChanged"/>
-
+    <Grid x:Name="GEGE">
+        <Slider Name="SldPrice" HorizontalAlignment="Left" Margin="248,299,0,0" VerticalAlignment="Top" Width="154" TickPlacement="Both" Maximum="15"/>
+        <TextBox Name="TxbPrice" HorizontalAlignment="Left" Margin="279,342,0,0" TextWrapping="Wrap" Text="{Binding ElementName=SldPrice,Path=Value, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="46"/>
+        <Button Name="BtnCreate" Content="Button" HorizontalAlignment="Left" Margin="521,206,0,0" VerticalAlignment="Top" Height="63" Width="108" Click="BtnCreate_Click"/>
     </Grid>
 </Page>
