--- a/Pages/Admin Main/UserControl.xaml
+++ b/Pages/Admin Main/UserControl.xaml
@@ -16,14 +16,6 @@
         <DockPanel Grid.Row="0">
             <Label Grid.RowSpan="1" VerticalAlignment="Center" FontSize="18">Admin</Label>
             <Button 
-                Name="AddItem_Btn"
-                Content="Добавить товар"
-                Click="AddItem_Btn_Click"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Left"
-                Margin="20 0 0 0"   
-                />
-            <Button 
                 Name="Btn_exit"
                 Content="Назад"
                 Width="129" Height="29"
@@ -32,20 +24,19 @@
                 HorizontalAlignment="Right"
                 Margin="0,0,10,0"/>
         </DockPanel>
-        <DockPanel Margin="0,10,22,384" Grid.Row="1">
+        <DockPanel Margin="0,10,22,297" Grid.Row="1">
             <DataGrid 
-                Name="DgProducts"
+                Name="DgUsers"
                 AutoGenerateColumns="False"
                 RowBackground="White"
                 AlternatingRowBackground="White"
-                HorizontalScrollBarVisibility="Disabled" Height="262" SelectedIndex="2" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Visible" Width="1259"
-                VerticalAlignment="Top">
+                HorizontalScrollBarVisibility="Disabled" Height="348" SelectedIndex="2" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Visible" Width="1259">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="ИдПользователя" Width="*" Binding="{Binding IDItem}"/>
-                    <DataGridTextColumn Header="Логин" Width="*" Binding="{Binding ItemName}"/>
-                    <DataGridTextColumn Header="Пароль" Width="*" Binding="{Binding Price}"/>
-                    <DataGridTextColumn Header="ИДРоли" Width="*" Binding="{Binding Discription}"/>
-                    <DataGridTextColumn Header="ИмяРоли" Width="*" Binding="{Binding CategoryID}"/>
+                    <DataGridTextColumn Header="ИдПользователя" Width="*" Binding="{Binding IDUser}"/>
+                    <DataGridTextColumn Header="Логин" Width="*" Binding="{Binding Login}"/>
+                    <DataGridTextColumn Header="Пароль" Width="*" Binding="{Binding Password}"/>
+                    <DataGridTextColumn Header="ИДРоли" Width="*" Binding="{Binding RoleID}"/>
+                    <DataGridTextColumn Header="ИмяРоли" Width="*" Binding="{Binding Role.Name}"/>
                     <DataGridTemplateColumn Header="Удалить/Изменить" Width="200">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
@@ -59,6 +50,14 @@
                 </DataGrid.Columns>
             </DataGrid>
         </DockPanel>
-        <TextBox HorizontalAlignment="Left" Margin="112,392,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.438,0.225"/>
+
+        <TextBox Name="TxbLogin" HorizontalAlignment="Left" Margin="230,475,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="187" RenderTransformOrigin="0.438,0.225" Height="39" FontFamily="Arial" FontSize="16"/>
+        <TextBox Name="TxbPassword" HorizontalAlignment="Left" Margin="530,475,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="187" RenderTransformOrigin="0.438,0.225" Height="39" FontFamily="Arial" FontSize="16"/>
+        <ComboBox Name="CmbRole" HorizontalAlignment="Left" Margin="842,475,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" Height="39" SelectionChanged="CmbRole_SelectionChanged" FontFamily="Arial" FontSize="20"/>
+        <Label Content="Добавить пользователя" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="204" FontFamily="Arial" FontSize="16" Margin="0,393,0,0"/>
+        <Label Content="Логин" HorizontalAlignment="Left" Margin="230,444,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Пароль" HorizontalAlignment="Left" Margin="530,444,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Роль" HorizontalAlignment="Left" Margin="842,444,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Button Name="BtnAddUser" Content="Добавить" HorizontalAlignment="Left" Margin="571,565,0,0" Grid.Row="1" VerticalAlignment="Top" Height="36" Width="105" Click="BtnAddUser_Click"/>
     </Grid>
 </Page>
